# GDC-Aptify-Tap-POC

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  requirements.txt  tox.ini
tap_aptify/: __init__.py  __main__.py  client.py  tap.py
tests/: __init__.py  test_core.py
