[tool.poetry]
name = "tap-aptify"
version = "0.0.1"
description = "Singer tap for aptify, built with the Meltano Singer SDK."
authors = ["FirstName LastName <firstname.lastname@example.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["ELT", "aptify"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
singer-sdk = "~0.44.3"
sqlalchemy = "~2.0.36"
pendulum = "*"
pymssql = "2.3.0"
pyodbc = "^5.2.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]


[tool.poetry.scripts]
tap-aptify = "tap_aptify.tap:Tapaptify.cli"

[tool.poetry.dev-dependencies]
pytest = ">=8"
singer-sdk = { version = "~0.44.3", extras = ["testing"] }

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = ["COM812"]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = ["--durations=10"]
