[tool.poetry]
name = "tap-aptify"
version = "0.0.1"
description = "Singer tap for aptify, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "aptify",
]
license = "Apache-2.0"

# Explicitly include only the tap_aptify package
packages = [
  { include = "tap_aptify" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
singer-sdk = { version = "~0.44.3" }
sqlalchemy = "~2.0.36"
pendulum = "*"
pyodbc = "^5.2.0"
fs-s3fs = { version = "^1.1.1", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
singer-sdk = { version = "~0.44.3", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_aptify"]
target-version = "py39"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_aptify"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-aptify = "tap_aptify.tap:Tapaptify.cli"
